{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 10,
  "lineage": "21d03978-9283-a63c-cf60-1ef89c92c35a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0910ce22fbfa68e1d",
            "arn": "arn:aws:ec2:eu-central-1:851725377346:instance/i-07f7fee3950da3f2b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f7fee3950da3f2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rtp-03",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c069b5da3833ffd",
            "private_dns": "ip-10-10-1-194.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014b49627b97da955",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09aa6eb5fd5cc5bd4",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f124996754443bd6"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.subnet1",
            "aws_vpc.geo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725377346:internet-gateway/igw-050f70e55b363708a",
            "id": "igw-050f70e55b363708a",
            "owner_id": "851725377346",
            "tags": {
              "Name": "igw1"
            },
            "tags_all": {
              "Name": "igw1"
            },
            "vpc_id": "vpc-03e51ca2b8456b217"
          },
          "dependencies": [
            "aws_vpc.geo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725377346:route-table/rtb-0ae2ad1e1a615fbef",
            "id": "rtb-0ae2ad1e1a615fbef",
            "owner_id": "851725377346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050f70e55b363708a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "tags_all": {
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e51ca2b8456b217"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.geo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bacdef3ea83bac3c",
            "route_table_id": "rtb-0ae2ad1e1a615fbef",
            "subnet_id": "subnet-09aa6eb5fd5cc5bd4"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.route1",
            "aws_subnet.subnet1",
            "aws_vpc.geo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725377346:security-group/sg-0f124996754443bd6",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0f124996754443bd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec-group",
            "name_prefix": "",
            "owner_id": "851725377346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow this"
            },
            "tags_all": {
              "Name": "allow this"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e51ca2b8456b217"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725377346:subnet/subnet-09aa6eb5fd5cc5bd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aa6eb5fd5cc5bd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725377346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-03e51ca2b8456b217"
          },
          "dependencies": [
            "aws_vpc.geo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "geo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725377346:vpc/vpc-03e51ca2b8456b217",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0126411369d5982f6",
            "default_route_table_id": "rtb-064ecf211f4d1b018",
            "default_security_group_id": "sg-04c7d3948dfd079fe",
            "dhcp_options_id": "dopt-07c70bebe4ebd7b7a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e51ca2b8456b217",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064ecf211f4d1b018",
            "owner_id": "851725377346"
          }
        }
      ]
    }
  ]
}